--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
             <li class="menu__item">
               <a class="menu__link" href="./index.html">Студія</a>
             </li>
-            <li class="menu__item menu__link--current"><a class="menu__link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="menu__item"><a class="menu__link menu__link--current" href="./portfolio.html">Портфоліо</a></li>
             <li class="menu__item"><a class="menu__link" href="">Контакти</a></li>
           </ul>
           <ul class="contacts list">
