--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
               <a class="menu__link menu__link--current" href="./index.html">Студія</a>
             </li>
             <li class="menu__item"><a class="menu__link" href="./portfolio.html">Портфоліо</a></li>
-            <li class="menu__item"><a class="menu__link" href="">Контакти</a></li>
+            <li class="menu__item"><a class="menu__link" href="https://uk.wikipedia.org/wiki/%D0%91%D1%96%D0%BB%D0%BB%D1%96_%D0%93%D0%B5%D1%80%D1%80%D1%96%D0%BD%D2%91%D1%82%D0%BE%D0%BD" target="_blank"
+            rel="noreferrer noopener">Контакти</a></li>
           </ul>
           <ul class="contacts list">
             <li class="contacts__item">
@@ -54,16 +55,16 @@
           </ul>
           <ul class="header-socialnetworks list">
             <li class="header-socialnetworks__list">
-              <a class="header-socialnetworks__link" href="https://www.instagram.com/" target="blank">Instagram</a>
+              <a class="header-socialnetworks__link" href="https://www.instagram.com/" target="blank" rel="noreferrer noopener">Instagram</a>
             </li>
             <li class="header-socialnetworks__list">
-              <a class="header-socialnetworks__link" href="https://www.twitter.com" target="blank">Twitter</a>
+              <a class="header-socialnetworks__link" href="https://www.twitter.com" target="blank" rel="noreferrer noopener">Twitter</a>
             </li>
             <li class="header-socialnetworks__list">
-              <a class="header-socialnetworks__link" href="https://www.facebook.com" target="blank">Facebook</a>
+              <a class="header-socialnetworks__link" href="https://www.facebook.com" target="blank" rel="noreferrer noopener">Facebook</a>
             </li>
             <li class="header-socialnetworks__list">
-              <a class="header-socialnetworks__link" href="https://www.linkedin.com" target="blank">LinkedIn</a>
+              <a class="header-socialnetworks__link" href="https://www.linkedin.com" target="blank" rel="noreferrer noopener">LinkedIn</a>
             </li>
           </ul>
         </nav>
@@ -220,7 +221,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.instagram.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Інстаграм"
@@ -233,7 +234,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://twitter.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Твітеер"
@@ -246,7 +247,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.facebook.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Фейсбук"
@@ -259,7 +260,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.linkedin.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Лінкедин"
@@ -311,13 +312,13 @@
                 />
               </picture>
               <div class="team-div">
-                <h3 class="team-div__title">Ольга Рєпіна</h3>
-                <p class="team-div__p" lang="en">Frontend Developer</p>
+                <h3 class="team-div__title">Ігор Дем'яненко</h3>
+                <p class="team-div__p" lang="en">Product Designer</p>
                 <ul class="social-links-team-list list">
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.instagram.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Інстаграм"
@@ -330,7 +331,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://twitter.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Твітеер"
@@ -343,7 +344,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.facebook.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Фейсбук"
@@ -356,7 +357,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.linkedin.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Лінкедин"
@@ -408,13 +409,13 @@
                 />
               </picture>
               <div class="team-div">
-                <h3 class="team-div__title">Микола Тарасов</h3>
-                <p class="team-div__p" lang="en">Marketing</p>
+                <h3 class="team-div__title">Ігор Дем'яненко</h3>
+                <p class="team-div__p" lang="en">Product Designer</p>
                 <ul class="social-links-team-list list">
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.instagram.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Інстаграм"
@@ -427,7 +428,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://twitter.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Твітеер"
@@ -440,7 +441,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.facebook.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Фейсбук"
@@ -453,7 +454,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.linkedin.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Лінкедин"
@@ -505,13 +506,13 @@
                 />
               </picture>
               <div class="team-div">
-                <h3 class="team-div__title">Михайло Єрмаков</h3>
-                <p class="team-div__p" lang="en">UI Designer</p>
+                <h3 class="team-div__title">Ігор Дем'яненко</h3>
+                <p class="team-div__p" lang="en">Product Designer</p>
                 <ul class="social-links-team-list list">
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.instagram.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Інстаграм"
@@ -524,7 +525,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://twitter.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Твітеер"
@@ -537,7 +538,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.facebook.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Фейсбук"
@@ -550,7 +551,7 @@
                   <li class="social-links-team-list__item">
                     <a
                       class="social-links-team-list__link"
-                      href=""
+                      href="https://www.linkedin.com"
                       target="_blank"
                       rel="noreferrer noopener"
                       aria-label="Лінкедин"
@@ -576,7 +577,7 @@
             <li class="visitors-list">
               <a
                 class="visitors-link-icon"
-                href=""
+                href="https://anitube.in.ua/94-van-pis.html"
                 target="_blank"
                 rel="noreferrer noopener"
                 aria-label="Я-ко"
@@ -589,7 +590,7 @@
             <li class="visitors-list">
               <a
                 class="visitors-link-icon"
-                href=""
+                href="https://anitube.in.ua/4106-sinya-vyaznicya.html"
                 target="_blank"
                 rel="noreferrer noopener"
                 aria-label="tegline here"
@@ -602,7 +603,7 @@
             <li class="visitors-list">
               <a
                 class="visitors-link-icon"
-                href=""
+                href="https://anitube.in.ua/4111-bleach-sennen-kessen-hen.html"
                 target="_blank"
                 rel="noreferrer noopener"
                 aria-label="Company"
@@ -615,7 +616,7 @@
             <li class="visitors-list">
               <a
                 class="visitors-link-icon"
-                href=""
+                href="https://anitube.in.ua/4026-hajime-no-ippo.html"
                 target="_blank"
                 rel="noreferrer noopener"
                 aria-label="Foster"
@@ -628,7 +629,7 @@
             <li class="visitors-list">
               <a
                 class="visitors-link-icon"
-                href=""
+                href="https://anitube.in.ua/4110-chainsaw-man.html"
                 target="_blank"
                 rel="noreferrer noopener"
                 aria-label="Brand"
@@ -641,7 +642,7 @@
             <li class="visitors-list">
               <a
                 class="visitors-link-icon"
-                href=""
+                href="https://anitube.in.ua/2099-monstr-monster.html"
                 target="_blank"
                 rel="noreferrer noopener"
                 aria-label="Tag line"
