--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,8 @@
               <a class="menu__link" href="./index.html">Студія</a>
             </li>
             <li class="menu__item"><a class="menu__link menu__link--current" href="./portfolio.html">Портфоліо</a></li>
-            <li class="menu__item"><a class="menu__link" href="">Контакти</a></li>
+            <li class="menu__item"><a class="menu__link" href="https://uk.wikipedia.org/wiki/%D0%91%D1%96%D0%BB%D0%BB%D1%96_%D0%93%D0%B5%D1%80%D1%80%D1%96%D0%BD%D2%91%D1%82%D0%BE%D0%BD" target="_blank"
+              rel="noreferrer noopener">Контакти</a></li>
           </ul>
           <ul class="contacts list">
             <li class="contacts__item">
@@ -79,7 +80,7 @@
         <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="list portfolio-filter">
-            <li><button type="button" class="button-portfolio">Усі</button></li>
+            <li><button type="button" class="button-portfolio button-portfolio__activ">Усі</button></li>
             <li><button type="button" class="button-portfolio">Веб-сайти</button></li>
             <li><button type="button" class="button-portfolio">Додатки</button></li>
             <li><button type="button" class="button-portfolio">Дизайн</button></li>
